added add player form

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@ footer {
 
 <body>
     <h1>Buck Boost FC</h1>
+    <input type="text" placeholder="Name.." id="name" name="search">
+    <input type="text" placeholder="Surname.." id="surname" name="search">
+    <input type="text" placeholder="Position.." id="position" name="search">
+    <input type="text" placeholder="Age.." id="age" name="search">
     <section><button type="button">+ Add Player</button></section>
     <input type="text" placeholder="Search.." id="search" name="search">
     <button type="submit" id="btn"><i class="fa fa-search">SRCH</i></button>
