restructured the project

--- a/index.html
+++ b/index.html
@@ -1,30 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Buck Boost FC</title>
+  <meta charset="UTF-8">
+  <title>Buck Boost FC</title>
+  <link rel="stylesheet" type="text/css" href="/css/app.css">
 
-<style>
-body {
-  background-color: lightgrey;
-  margin:0 auto;
-  text-align: center;
-  font-family: Sans-serif;
-}
-
-h1 {
-  color: white;
-  text-align: center;
-}
-
-section {
-  padding: 10px;
-}
-
-footer {
-  padding: 10px;
-}
-</style>
 </head>
 
 <body>
@@ -45,72 +25,6 @@ footer {
     <footer>&copy; Dok App 2019</footer>
 </body>
 
-<script>
-    // declare variables
-    var playerContainer  = document.getElementById("player-info");
-    var btn  = document.getElementById("btn");
-    var sbmt  = document.getElementById("sbmt");
-    var plyr_name = document.getElementById("search").value;
-    var plyr_name = document.getElementById("name").value;
-    var plyr_surname = document.getElementById("surname").value;
-    var plyr_position = document.getElementById("position").value;
-    var plyr_age = document.getElementById("age").value;
-
-    // get player info
-    btn.addEventListener("click", function() {
-      var plyr_name = document.getElementById("search").value;
-      var request = new XMLHttpRequest();
-      request.open('GET', 'http://localhost:3000/team/'+plyr_name, true);
-      request.onload = function() {
-        var ourData = JSON.parse(request.responseText);
-        //alert(ourData);
-        renderHTML(ourData);
-      };
-      request.setRequestHeader("Content-type", "application/json");
-      request.send();
-    });
-
-      var addForm = document.getElementById("addForm");
-
-    //add player info
-    addForm.addEventListener("submit", function(e) {
-      e.preventDefault();
-    var plyr_name = document.getElementById("name").value;
-    var plyr_surname = document.getElementById("surname").value;
-    var plyr_position = document.getElementById("position").value;
-    var plyr_age = document.getElementById("age").value;
-
-    var player = {
-      name: plyr_name,
-      surname: plyr_surname,
-      position: plyr_position,
-      age: plyr_age
-    }
-    console.log(player)
-
-  var request = new XMLHttpRequest();
-
-  request.open('POST', 'http://localhost:3000/team/');
-  request.onload = function() {
-    console.log(request.responseText);
-  }
-
-request.setRequestHeader("Content-Type", "application/json");
-    var content  = JSON.stringify({plyr: player});
-  console.log(content)
-  request.send(content);
-    });
-
-
-    // display player on html
-    function renderHTML(data) {
-        var htmlString = "";
-
-        for (i = 0; i < data.length; i++) {
-          htmlString += "<p>" + data[i].name + "</p>";
-        }
-        playerContainer.insertAdjacentHTML('beforeend', htmlString);
-    }
-</script> 
+<script src="/views/player.js"></script>
 
 </html>
